<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/pi"
        android:layout_width="@dimen/widthandheight"
        android:layout_height="@dimen/widthandheight"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="@dimen/margintop"
        android:src="@drawable/pikachu"/>

    <ImageView
        android:id="@+id/charmander"
        android:layout_width="@dimen/widthandheight"
        android:layout_height="@dimen/widthandheight"
        android:layout_marginTop="@dimen/margintop"
        android:layout_marginLeft="35dp"
        android:src="@drawable/charmander"/>

    <ImageView
        android:id="@+id/pokeball"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginLeft="145dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/pokeball"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:id="@+id/teamAscore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_marginTop="85dp"
                android:padding="4dp"
                android:text="0"
                android:textColor="@color/orange"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/value"
                android:layout_marginRight="@dimen/value"
                android:onClick="ember"
                android:text="@string/ember"
                android:background="@color/orange"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/value"
                android:layout_marginRight="@dimen/value"
                android:onClick="headButt"
                android:text="@string/headbutt"
                android:background="@color/orange"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/value"
                android:layout_marginRight="@dimen/value"
                android:onClick="fireTail"
                android:text="@string/firetail"
                android:background="@color/orange"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="88dp"
            android:layout_marginBottom="1dp"
            android:background="@android:color/darker_gray">

        </View>

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">


            <TextView
                android:id="@+id/teamBscore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:layout_marginTop="85dp"
                android:text="0"
                android:textColor="@color/orange"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/value"
                android:layout_marginRight="@dimen/value"
                android:onClick="electraBuzz"
                android:text="@string/electrabuzz"
                android:background="@color/orange"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/value"
                android:layout_marginRight="@dimen/value"
                android:onClick="thunderBolt"
                android:text="@string/thunderbolt"
                android:background="@color/orange"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/value"
                android:layout_marginRight="@dimen/value"
                android:onClick="electricPwr"
                android:text="@string/electricpower"
                android:background="@color/orange"/>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:background="@color/orange"
        android:text="@string/reset" />
</RelativeLayout>